changed var names to camel case and changed link tag highlighting for table links

--- a/public/css/course.css
+++ b/public/css/course.css
@@ -297,3 +297,17 @@
         overflow: auto;
     }
 }
+
+.table-link {
+    color: #1768AC;
+    font-size: 1em;
+}
+.table-link:hover {
+    color: #0F436D;
+}
+.table-link:active {
+    color: #293651;
+}
+.table-link:visted {
+    color: #1768AC;
+}
