--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,7 +19,7 @@
         <p class="dir-search-p">Quickly find a class by keyword, index #, or course ID.</p>
         <div class="dirclass">
             <form id="dsearch" method="get" action="/">
-                <input type="hidden" name="searchType" value="direct">
+                <input type="hidden" name="search" value="direct">
                 <select>
                     <option selected disabled>Search Category</option>
                     <option value="keyword">Keyword</option>
@@ -43,7 +43,7 @@
             <form id="rsearch" method="get" action="/">
                 <div class="mid-container">
                     <div class="req-col">
-                        <input type="hidden" name="searchType" value="requirement">
+                        <input type="hidden" name="search" value="requirement">
                         <div class="reqBoxes">
                             <h4>Natural Sciences</h4>
                             <input type="checkbox" name="NS" id="NS">
