radio rating form is broken

--- a/views/pages/course.ejs
+++ b/views/pages/course.ejs
@@ -120,13 +120,8 @@
                 </div>
                 <div class="add-comments border rounded">
                     <span class="subheader-text bold">Comment on this course</span>
-<<<<<<< HEAD
-                    <form action="/comments" method="post">
+                    <form id="courseEval" action="#" method="post">
                         <textarea class="form-control" name="newComment" type="text" placeholder="Enter your own thoughts and opinions about this course here!" required></textarea>
-=======
-                    <form action="#" method="post">
-                        <textarea class="form-control" name="new-comment" type="text" placeholder="Enter your own thoughts and opinions about this course here!" required></textarea>
->>>>>>> master
                         <span class="subsubheader-text">Rate this course:</span>
                         <span class="rating align-middle">
                             <label>
@@ -160,7 +155,7 @@
                                 <span class="icon"><i class="fas fa-star"></i></span>
                             </label>
                         </span>
-                        <button type="submit" method="post" action="/course" class="btn btn-primary comment-button bold">Post Comment</button>
+                        <button type="submit" class="btn btn-primary comment-button bold">Post Comment</button>
                     </form>
                 </div>
                 <div class="comments-header header-text">
