--- a/views/pages/course.ejs
+++ b/views/pages/course.ejs
@@ -120,7 +120,7 @@
                 </div>
                 <div class="add-comments border rounded">
                     <span class="subheader-text bold">Comment on this course</span>
-                    <form id="courseEval" action="#" method="post">
+                    <form action="#" method="post">
                         <textarea class="form-control" name="newComment" type="text" placeholder="Enter your own thoughts and opinions about this course here!" required></textarea>
                         <span class="subsubheader-text">Rate this course:</span>
                         <span class="rating align-middle">
