finished changing the frontend to be responsive to whether user is logged in and whether they have commented before

--- a/public/css/course.css
+++ b/public/css/course.css
@@ -163,7 +163,7 @@
     margin-top: 0.2em;
 }
 
-.comment-button.bold.btn.btn-primary{
+.comment-button.btn.btn-primary{
     float: right;
     font-size: 1.2em;
     margin-top: 0.5em;
@@ -306,4 +306,16 @@
 }
 .table-link:visted {
     color: #1768AC;
+}
+
+.disabled-button-wrapper {
+    display: inline-block; /* display: block works as well */
+    float: right;
+    margin-top: 0.5em;
+    margin-right: 1em;
+}
+
+#disabled-button-wrapper  .btn[disabled] {
+  /* don't let button block mouse events from reaching wrapper */
+  pointer-events: none;
 }
