--- a/views/pages/course.ejs
+++ b/views/pages/course.ejs
@@ -16,6 +16,7 @@
         <header>
             <% include ../partials/navbar %>
         </header>
+        <% include ../partials/notification %>
         <div class="container-fluid">
             <div class="column-left">
                 <div class="class-header">
