--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Rutgers Course Searcher++ | Error</title>
+    <title>Rutgers Course Searcher++</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
@@ -14,16 +14,18 @@
     <header>
         <% include ../partials/navbar %>
     </header>
-    <div class="error-container">
+    <div class="message-container">
         <%
             if (error === 404) { %>
-                <h1 class="error"> Error 404! <br> Page Not Found</h1>
+                <h1 class="message"> Error 404! <br> Page Not Found</h1>
         <%  } else if (error === 500) { %>
-                <h1 class="error">Error 500! <br> Something broke internally <br> :(</h1>
+                <h1 class="message">Error 500! <br> Something broke internally <br> :(</h1>
         <%  } else if (error === 'course') { %>
-                <h1 class="error">Error! <br> Course not found</h1>
+                <h1 class="message">Error! <br> Course not found</h1>
         <%  }  else if (error === 'course-error') { %>
-                <h1 class="error">Error! <br> Could not retrieve course information</h1>
+                <h1 class="message">Error! <br> Could not retrieve course information</h1>
+        <%  }  else if (error === 'account-delete') { %>
+                <h1 class="message">Successfully deleted account. <br> Click <a href="/">here</a> to return to the homepage.</h1>
         <%  }  %>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
