--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -21,7 +21,7 @@
             <form id="dsearch" method="get" action="/">
                 <input type="hidden" name="search" value="direct">
                 <select name="category" required>
-                    <option selected disabled>Search Category</option>
+                    <option value="" selected disabled>Search Category</option>
                     <option value="keyword">Keyword</option>
                     <option value="index">Index #</option>
                     <option value="course">Course ID</option>
