another user querry fix and changed overall rating to rating so the stars don't over flow

--- a/views/pages/course.ejs
+++ b/views/pages/course.ejs
@@ -102,7 +102,7 @@
             </div>
             <div class="column-right divider">
                 <div class="class-rating">
-                    <span class="header-text bold">Overall Rating</span>
+                    <span class="header-text bold">Rating</span>
                     <span class="stars">
                         <% let fullStars = Math.floor(courseRating); %>
                         <% let halfStars = courseRating - fullStars; %>
