--- a/views/pages/course.ejs
+++ b/views/pages/course.ejs
@@ -198,8 +198,8 @@
                         <% if (user) { %>
                         <button type="submit" class="btn btn-primary comment-button ">Post Comment</button>
                         <% } else { %>
-                        <span class="disabled-button-wrapper" data-toggle="tooltip" data-placement="auto" title="please login to commnent!">
-                          <button class="btn btn-primary" style="pointer-events: none;" type="button" disabled>Post Comment</button>
+                        <span class="disabled-button-wrapper" data-toggle="tooltip" data-placement="auto" title="You must be logged in to comment!">
+                          <button class="btn btn-primary comment-button" style="pointer-events: none;" type="button" disabled>Post Comment</button>
                         </span>
                         <% } %>
                     </form>
